--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 </div>
                 <div class="about-image">
                     <div class="image-container">
-                        <img src="assets/WhatsApp Image 2025-09-17 at 22.51.00_2dfec1bf.jpg" alt="John Smith Profile Picture">
+                        <img src="assets/profile.jpg" alt="John Smith Profile Picture">
                         <div class="image-overlay"></div>
                     </div>
                 </div>
